# pico-ml

./: README.md
src/: CMakeLists.txt  blas.c  blas.h  blas_multicore.c  main.c  main.h  model.h  parser.c  parser.h  sine_model.h  weights.h
